--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:safety.westconsult@gmail.com"
+                  <a href="mailto:info@thewestconsult.com"
                     ><i class="fa-solid fa-envelope"></i>
-                    safety.westconsult@gmail.com</a
-                  >
+                    info@thewestconsult.com
+                  </a>
                 </div>
               </div>
             </div>
@@ -204,9 +204,7 @@
                           <li>
                             <a href="Insurance_01.html">Our services</a>
                           </li>
-                          <li>
-                            <a href="about.html">About Us</a>
-                          </li>
+
                           <li>
                             <a href="faqs.html">FAQ</a>
                           </li>
@@ -297,8 +295,8 @@
                 <i class="fa-solid fa-envelope"></i>
               </div>
               <div class="tpoffcanvas__contact-content-content">
-                <a href="mailto:safety.westconsult@gmail.com">
-                  safety.westconsult@gmail.com
+                <a href="mailto:info@thewestconsult.com">
+                  info@thewestconsult.com
                 </a>
               </div>
             </div>
@@ -468,7 +466,12 @@
       </div>
       <div class="tp-slider__social-horizonter">
         <ul>
-          <li><a href="#">INSTAGRAM</a></li>
+          <li>
+            <a
+              href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+              >INSTAGRAM</a
+            >
+          </li>
           <li><a href="#">TWITTER</a></li>
           <li><a href="#">FACEBOOK</a></li>
         </ul>
@@ -502,11 +505,6 @@
                   From driver hiring to insurance and audits – we handle all
                   safety and compliance needs in one go.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -527,11 +525,6 @@
                   We know trucking inside out, helping you minimize risks, avoid
                   fines, and stay compliant.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -550,11 +543,6 @@
                   We reduce paperwork, cut unnecessary costs, and keep your
                   fleet running smoothly.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -654,7 +642,7 @@
               <div class="tp-about__btn-box">
                 <div class="tp-about__author mt-40">
                   <div class="about-btn mr-30 mb-25">
-                    <a class="tp-btn" href="about.html">DISCOVER MORE</a>
+                    <a class="tp-btn" href="Insurance_01.html">DISCOVER MORE</a>
                   </div>
                 </div>
               </div>
@@ -1737,8 +1725,9 @@
                           ></a>
                         </li>
                         <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-pinterest-p"></i
+                          <a
+                            href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+                            ><i class="fa-brands fa-instagram"></i
                           ></a>
                         </li>
                       </ul>
