--- a/Insurance_01.html
+++ b/Insurance_01.html
@@ -180,14 +180,15 @@
                     href="https://www.google.com.co/maps/place/890+N+State+St,+Elgin,+IL+60123,+США/@42.0554352,-88.2985164,17z/data=!3m1!4b1!4m6!3m5!1s0x880f056ff4b76fe9:0x846ef8c3930b5206!8m2!3d42.0554352!4d-88.2959415!16s%2Fg%2F11cp7ym2dw?entry=ttu&g_ep=EgoyMDI1MDMxNy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank"
                   >
-                    <i class="fa-sharp fa-solid fa-location-dot"></i> 890 N State St Elgin, IL 60123</a
+                    <i class="fa-sharp fa-solid fa-location-dot"></i> 890 N
+                    State St Elgin, IL 60123</a
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:safety.westconsult@gmail.com"
+                  <a href="mailto:info@thewestconsult.com "
                     ><i class="fa-solid fa-envelope"></i>
-                    safety.westconsult@gmail.com</a
-                  >
+                    info@thewestconsult.com
+                  </a>
                 </div>
               </div>
             </div>
@@ -204,12 +205,12 @@
                             <a href="index.html">Home</a>
                           </li>
                           <li>
-                            <a class="active" href="Insurance_01.html">Our services</a>
+                            <a class="active" href="Insurance_01.html"
+                              >Our services</a
+                            >
                           </li>
+
                           <li>
-                            <a href="about.html">About Us</a>
-                          </li>
-<li>
                             <a href="faqs.html">FAQ</a>
                           </li>
                           <li><a href="contact.html">Contact</a></li>
@@ -222,7 +223,6 @@
                   class="tp-header__right-box d-flex justify-content-end align-items-center"
                 >
                   <div class="tp-header__right d-flex align-items-center">
-                   
                     <div class="tp-header__contact-number">
                       <div class="sm-clist__icon">
                         <i class="flaticon-telephone"></i>
@@ -300,7 +300,9 @@
                 <i class="fa-solid fa-envelope"></i>
               </div>
               <div class="tpoffcanvas__contact-content-content">
-                <a href="mailto:safety.westconsult@gmail.com"> safety.westconsult@gmail.com </a>
+                <a href="mailto:safety.westconsult@gmail.com">
+                  safety.westconsult@gmail.com
+                </a>
               </div>
             </div>
             <div class="tpoffcanvas__contact-content d-flex">
@@ -338,13 +340,13 @@
             <div class="col-xxl-12">
               <div class="breadcrumb__content p-relative z-index-1 text-center">
                 <div class="breadcrumb__list mb-10">
-                  <span><a href="index.html">INSUREZ </a></span>
+                  <span><a href="index.html">WEST CONSULT </a></span>
                   <span class="dvdr"> / </span>
-                  <span class="sub-page-black">Insurance 01</span>
+                  <span class="sub-page-black">Our Services</span>
                 </div>
-                <h3 class="breadcrumb__title mb-20">Insurance</h3>
+                <h3 class="breadcrumb__title mb-20">Our Services</h3>
               </div>
-            </div>
+            </div>s
           </div>
         </div>
       </div>
@@ -378,11 +380,6 @@
                   From driver hiring to insurance and audits – we handle all
                   safety and compliance needs in one go.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -403,11 +400,6 @@
                   We know trucking inside out, helping you minimize risks, avoid
                   fines, and stay compliant.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -426,11 +418,6 @@
                   We reduce paperwork, cut unnecessary costs, and keep your
                   fleet running smoothly.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -448,9 +435,7 @@
           >
             <div class="tp-section-box text-center mb-30">
               <div class="tp-section-subtitle mb-10">What We Provide</div>
-              <h2 class="tp-section-title mb-45">
-                Our Services
-              </h2>
+              <h2 class="tp-section-title mb-45">Our Services</h2>
             </div>
           </div>
         </div>
@@ -842,14 +827,14 @@
         <div class="tp-cta-4__bg">
           <div class="row align-items-center">
             <div class="col-xl-8">
-              <h3 class="cta-titile">
-                Know about West Consult INC
-              </h3>
+              <h3 class="cta-titile">Know about West Consult INC</h3>
             </div>
             <div class="col-xl-4">
               <div class="tp-cta-4__right text-end">
                 <div class="tp-cta-4__btn pt-10">
-                  <a class="tp-btn-black" href="about.html">TAKE YOUR CLAIM</a>
+                  <a class="tp-btn-black" href="Insurance_01.html"
+                    >TAKE YOUR CLAIM</a
+                  >
                 </div>
               </div>
             </div>
