--- a/contact.html
+++ b/contact.html
@@ -185,10 +185,10 @@
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:safety.westconsult@gmail.com"
+                  <a href="mailto:info@thewestconsult.com "
                     ><i class="fa-solid fa-envelope"></i>
-                    safety.westconsult@gmail.com</a
-                  >
+                    info@thewestconsult.com
+                  </a>
                 </div>
               </div>
             </div>
@@ -207,9 +207,7 @@
                           <li>
                             <a href="Insurance_01.html">Our services</a>
                           </li>
-                          <li>
-                            <a href="about.html">About Us</a>
-                          </li>
+
                           <li>
                             <a href="faqs.html">FAQ</a>
                           </li>
@@ -225,11 +223,6 @@
                   class="tp-header__right-box d-flex justify-content-end align-items-center"
                 >
                   <div class="tp-header__right d-flex align-items-center">
-                    <div class="tp-header-search search-open-btn">
-                      <a href="javascript:void(0);">
-                        <i class="fa-regular fa-magnifying-glass"></i
-                      ></a>
-                    </div>
                     <div class="tp-header__contact-number">
                       <div class="sm-clist__icon">
                         <i class="flaticon-telephone"></i>
@@ -347,7 +340,7 @@
             <div class="col-xxl-12">
               <div class="breadcrumb__content p-relative z-index-1 text-center">
                 <div class="breadcrumb__list mb-10">
-                  <span><a href="index.html">INSUREZ </a></span>
+                  <span><a href="index.html">WEST CONSULT </a></span>
                   <span class="dvdr"> / </span>
                   <span class="sub-page-black">Contact Us</span>
                 </div>
@@ -495,7 +488,7 @@
             <div class="col-xl-4">
               <div class="tp-cta-4__right text-end">
                 <div class="tp-cta-4__btn pt-10">
-                  <a class="tp-btn-black" href="about.html">Read More</a>
+                  <a class="tp-btn-black" href="Insurance_01.html">Read More</a>
                 </div>
               </div>
             </div>
