--- a/faqs.html
+++ b/faqs.html
@@ -180,13 +180,14 @@
                     href="https://www.google.com.co/maps/place/890+N+State+St,+Elgin,+IL+60123,+США/@42.0554352,-88.2985164,17z/data=!3m1!4b1!4m5!3m4!1s0x880f056ff4b76fe9:0x846ef8c3930b5206!8m2!3d42.0554352!4d-88.2959415!16s%2Fg%2F11cp7ym2dw?entry=ttu&g_ep=EgoyMDI1MDMxNy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank"
                   >
-                    <i class="fa-sharp fa-solid fa-location-dot"></i> 890 N State St Elgin, IL 60123</a
+                    <i class="fa-sharp fa-solid fa-location-dot"></i> 890 N
+                    State St Elgin, IL 60123</a
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:safety.westconsult@gmail.com"
+                  <a href="mailto:info@thewestconsult.com "
                     ><i class="fa-solid fa-envelope"></i>
-                    safety.westconsult@gmail.com</a
+                   info@thewestconsult.com </a
                   >
                 </div>
               </div>
@@ -206,9 +207,7 @@
                           <li>
                             <a href="Insurance_01.html">Our services</a>
                           </li>
-                          <li>
-                            <a href="about.html">About Us</a>
-                          </li>
+
                           <li>
                             <a class="active" href="faqs.html">FAQ</a>
                           </li>
@@ -222,11 +221,7 @@
                   class="tp-header__right-box d-flex justify-content-end align-items-center"
                 >
                   <div class="tp-header__right d-flex align-items-center">
-                    <div class="tp-header-search search-open-btn">
-                      <a href="javascript:void(0);">
-                        <i class="fa-regular fa-magnifying-glass"></i
-                      ></a>
-                    </div>
+                    
                     <div class="tp-header__contact-number">
                       <div class="sm-clist__icon">
                         <i class="flaticon-telephone"></i>
@@ -304,7 +299,9 @@
                 <i class="fa-solid fa-envelope"></i>
               </div>
               <div class="tpoffcanvas__contact-content-content">
-                <a href="mailto:safety.westconsult@gmail.com"> safety.westconsult@gmail.com </a>
+                <a href="mailto:safety.westconsult@gmail.com">
+                  safety.westconsult@gmail.com
+                </a>
               </div>
             </div>
             <div class="tpoffcanvas__contact-content d-flex">
@@ -342,7 +339,7 @@
             <div class="col-xxl-12">
               <div class="breadcrumb__content p-relative z-index-1 text-center">
                 <div class="breadcrumb__list mb-10">
-                  <span><a href="index.html">INSUREZ </a></span>
+                  <span><a href="index.html">WEST CONSULT </a></span>
                   <span class="dvdr"> / </span>
                   <span class="sub-page-black">Faq</span>
                 </div>
@@ -379,7 +376,7 @@
                         aria-expanded="false"
                         aria-controls="collapseOne"
                       >
-                         What services does West Consult INC offer?
+                        What services does West Consult INC offer?
                       </button>
                     </span>
                   </div>
@@ -391,7 +388,10 @@
                     style=""
                   >
                     <div class="card-body">
-                      We provide a full range of safety and compliance services, including driver hiring, insurance assistance, safety audits, drug and alcohol testing programs, SMS score monitoring, and more.
+                      We provide a full range of safety and compliance services,
+                      including driver hiring, insurance assistance, safety
+                      audits, drug and alcohol testing programs, SMS score
+                      monitoring, and more.
                     </div>
                   </div>
                 </div>
@@ -402,10 +402,11 @@
                         class="btn btn-link"
                         data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo"
-                        aria-expanded="true"
+                        aria-expanded="false"
                         aria-controls="collapseTwo"
                       >
-                         How do I know if my business is compliant with <br> DOT regulations?
+                        How do I know if my business is compliant with <br />
+                        DOT regulations?
                       </button>
                     </span>
                   </div>
@@ -417,7 +418,9 @@
                     style=""
                   >
                     <div class="card-body">
-                      We offer comprehensive safety audits and risk assessments to help identify any compliance gaps and ensure your business meets all required standards.
+                      We offer comprehensive safety audits and risk assessments
+                      to help identify any compliance gaps and ensure your
+                      business meets all required standards.
                     </div>
                   </div>
                 </div>
@@ -431,7 +434,7 @@
                         aria-expanded="false"
                         aria-controls="collapseThree"
                       >
-                         What is SMS Score, and why is it important?
+                        What is SMS Score, and why is it important?
                       </button>
                     </span>
                   </div>
@@ -442,8 +445,10 @@
                     data-bs-parent="#accordion1"
                   >
                     <div class="card-body">
-                      The Safety Measurement System (SMS) Score evaluates your fleet’s safety performance based on violation data. We monitor and help improve this score to reduce risks and avoid penalties.
-
+                      The Safety Measurement System (SMS) Score evaluates your
+                      fleet’s safety performance based on violation data. We
+                      monitor and help improve this score to reduce risks and
+                      avoid penalties.
                     </div>
                   </div>
                 </div>
@@ -471,7 +476,7 @@
                         aria-expanded="false"
                         aria-controls="collapsefour"
                       >
-                         What types of insurance do you help with?
+                        What types of insurance do you help with?
                       </button>
                     </span>
                   </div>
@@ -482,7 +487,9 @@
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
-                      We assist with liability, cargo, and physical damage insurance for your fleet, ensuring you have the right coverage for all your trucking needs.
+                      We assist with liability, cargo, and physical damage
+                      insurance for your fleet, ensuring you have the right
+                      coverage for all your trucking needs.
                     </div>
                   </div>
                 </div>
@@ -496,7 +503,7 @@
                         aria-expanded="false"
                         aria-controls="collapsefive"
                       >
-                          Do you handle driver hiring and background checks?
+                        Do you handle driver hiring and background checks?
                       </button>
                     </span>
                   </div>
@@ -507,7 +514,10 @@
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
-                      Yes, we help with driver recruitment, including MVR (Motor Vehicle Record), PSP (Pre-Employment Screening Program), and Clearinghouse checks to ensure you’re hiring qualified drivers.
+                      Yes, we help with driver recruitment, including MVR (Motor
+                      Vehicle Record), PSP (Pre-Employment Screening Program),
+                      and Clearinghouse checks to ensure you’re hiring qualified
+                      drivers.
                     </div>
                   </div>
                 </div>
@@ -521,7 +531,7 @@
                         aria-expanded="false"
                         aria-controls="collapsesix"
                       >
-                          What is the Clearinghouse, and why is it important?
+                        What is the Clearinghouse, and why is it important?
                       </button>
                     </span>
                   </div>
@@ -532,7 +542,9 @@
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
-                      The Clearinghouse is a database where employers must report drug and alcohol violations. We ensure your drivers are compliant and help manage violations.
+                      The Clearinghouse is a database where employers must
+                      report drug and alcohol violations. We ensure your drivers
+                      are compliant and help manage violations.
                     </div>
                   </div>
                 </div>
@@ -562,7 +574,7 @@
                         aria-expanded="false"
                         aria-controls="collapseOne"
                       >
-                      What is a DQ file, and why do I need it?
+                        What is a DQ file, and why do I need it?
                       </button>
                     </span>
                   </div>
@@ -574,20 +586,25 @@
                     style=""
                   >
                     <div class="card-body">
-                      A DQ (Driver Qualification) file contains all required documentation for each driver. We help manage and organize these files to keep your business compliant with DOT regulations.                    </div>
+                      A DQ (Driver Qualification) file contains all required
+                      documentation for each driver. We help manage and organize
+                      these files to keep your business compliant with DOT
+                      regulations.
+                    </div>
                   </div>
                 </div>
                 <div class="card mb-30">
                   <div class="card-header" id="headingTwo">
                     <span class="mb-0">
                       <button
-                        class="btn btn-link"
+                        class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo"
-                        aria-expanded="true"
+                        aria-expanded="false"
                         aria-controls="collapseTwo"
                       >
-                      Do you provide assistance with permits?                      </button>
+                        Do you provide assistance with permits?
+                      </button>
                     </span>
                   </div>
                   <div
@@ -598,7 +615,9 @@
                     style=""
                   >
                     <div class="card-body">
-                      Yes, we handle permits and licensing requirements for your fleet to ensure you’re legally operating in all states.                    </div>
+                      Yes, we handle permits and licensing requirements for your
+                      fleet to ensure you’re legally operating in all states.
+                    </div>
                   </div>
                 </div>
                 <div class="card mb-30">
@@ -611,7 +630,8 @@
                         aria-expanded="false"
                         aria-controls="collapseThree"
                       >
-                      How can I improve my safety performance?                      </button>
+                        How can I improve my safety performance?
+                      </button>
                     </span>
                   </div>
                   <div
@@ -621,7 +641,9 @@
                     data-bs-parent="#accordion1"
                   >
                     <div class="card-body">
-                      We offer consulting services, including training programs, risk assessments, and ongoing monitoring of safety metrics like SMS scores to help improve your safety performance.
+                      We offer consulting services, including training programs,
+                      risk assessments, and ongoing monitoring of safety metrics
+                      like SMS scores to help improve your safety performance.
                     </div>
                   </div>
                 </div>
@@ -649,7 +671,7 @@
                         aria-expanded="false"
                         aria-controls="collapsefour"
                       >
-                      What is the cost of your services?
+                        What is the cost of your services?
                       </button>
                     </span>
                   </div>
@@ -660,7 +682,10 @@
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
-                      Our pricing depends on the specific services required for your business. We offer customized solutions tailored to your needs. Contact us for a quote.                    </div>
+                      Our pricing depends on the specific services required for
+                      your business. We offer customized solutions tailored to
+                      your needs. Contact us for a quote.
+                    </div>
                   </div>
                 </div>
                 <div class="card mb-30">
@@ -673,7 +698,7 @@
                         aria-expanded="false"
                         aria-controls="collapsefive"
                       >
-                          Do you handle driver hiring and background checks?
+                        Do you handle driver hiring and background checks?
                       </button>
                     </span>
                   </div>
@@ -684,7 +709,10 @@
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
-                      Yes, we help with driver recruitment, including MVR (Motor Vehicle Record), PSP (Pre-Employment Screening Program), and Clearinghouse checks to ensure you’re hiring qualified drivers.
+                      Yes, we help with driver recruitment, including MVR (Motor
+                      Vehicle Record), PSP (Pre-Employment Screening Program),
+                      and Clearinghouse checks to ensure you’re hiring qualified
+                      drivers.
                     </div>
                   </div>
                 </div>
@@ -698,7 +726,7 @@
                         aria-expanded="false"
                         aria-controls="collapsesix"
                       >
-                      What is the process for drug and alcohol testing?
+                        What is the process for drug and alcohol testing?
                       </button>
                     </span>
                   </div>
@@ -709,7 +737,10 @@
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
-                      We help implement and manage DOT-compliant drug and alcohol testing programs, including random testing, pre-employment testing, and post-incident testing.                    </div>
+                      We help implement and manage DOT-compliant drug and
+                      alcohol testing programs, including random testing,
+                      pre-employment testing, and post-incident testing.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -760,18 +791,13 @@
                       />
                     </div>
                   </div>
-                  <div class="col-xl-6 col-lg-6 col-md-6">
+                  <div class="col-xl-12 col-lg-12 col-md-12">
                     <div class="comment-form__input-box">
                       <input
                         type="text"
                         placeholder="Phone number"
                         name="Phone"
                       />
-                    </div>
-                  </div>
-                  <div class="col-xl-6 col-lg-6 col-md-6">
-                    <div class="comment-form__input-box">
-                      <input type="text" placeholder="Subject" name="Subject" />
                     </div>
                   </div>
                 </div>
