--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       <div class="tp-header">
         <div id="header-sticky" class="tp-header__wrapper-inner">
           <div class="tp-header__logo grey-bg-2">
-            <a href="index.html"
-              ><img src="assets/img/logo/logo.png" alt=""
+            <a href="index.html">
+              <img src="assets/img/logo/logo.png" alt=""
             /></a>
           </div>
           <div class="tp-header__main-header">
@@ -182,10 +182,10 @@
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:safety.westconsult@gmail.com"
+                  <a href="mailto:info@thewestconsult.com "
                     ><i class="fa-solid fa-envelope"></i>
-                    safety.westconsult@gmail.com</a
-                  >
+                    info@thewestconsult.com
+                  </a>
                 </div>
               </div>
             </div>
@@ -204,9 +204,7 @@
                           <li>
                             <a href="Insurance_01.html">Our services</a>
                           </li>
-                          <li>
-                            <a href="about.html">About Us</a>
-                          </li>
+
                           <li>
                             <a href="faqs.html">FAQ</a>
                           </li>
@@ -468,7 +466,12 @@
       </div>
       <div class="tp-slider__social-horizonter">
         <ul>
-          <li><a href="#">INSTAGRAM</a></li>
+          <li>
+            <a
+              href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+              >INSTAGRAM</a
+            >
+          </li>
           <li><a href="#">TWITTER</a></li>
           <li><a href="#">FACEBOOK</a></li>
         </ul>
@@ -502,11 +505,6 @@
                   From driver hiring to insurance and audits – we handle all
                   safety and compliance needs in one go.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -527,11 +525,6 @@
                   We know trucking inside out, helping you minimize risks, avoid
                   fines, and stay compliant.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -550,11 +543,6 @@
                   We reduce paperwork, cut unnecessary costs, and keep your
                   fleet running smoothly.
                 </p>
-                <div class="tpfeature__btn">
-                  <a href="about.html" class="tp-btn-text"
-                    >READ MORE <i class="fa-light fa-arrow-right"></i
-                  ></a>
-                </div>
               </div>
             </div>
           </div>
@@ -574,7 +562,7 @@
                   class="ab-1st-img"
                   src="assets/img/about/about-img.jpg "
                   alt=""
-                />
+                />s
               </div>
               <div class="tp-about__sec-img">
                 <img src="assets/img/about/about-sm.jpg" alt="" />
@@ -587,9 +575,7 @@
                 </div>
                 <div class="counter__item">
                   <div class="counter__content">
-                    <h3 class="counter__title">
-                      <span class="counter">150</span>+
-                    </h3>
+                    <h3 class="counter__title"><span class="">150</span>+</h3>
                     <p>Satisfied Customer</p>
                   </div>
                 </div>
@@ -654,7 +640,7 @@
               <div class="tp-about__btn-box">
                 <div class="tp-about__author mt-40">
                   <div class="about-btn mr-30 mb-25">
-                    <a class="tp-btn" href="about.html">DISCOVER MORE</a>
+                    <a class="tp-btn" href="Insurance_01.html">DISCOVER MORE</a>
                   </div>
                 </div>
               </div>
@@ -1275,7 +1261,7 @@
                   <i class="flaticon-group"></i>
                 </div>
                 <div class="tpfact__content">
-                  <h2><span class="counter">10</span>+</h2>
+                  <h2><span class="">10</span>+</h2>
                   <span>Professional Team</span>
                 </div>
               </div>
@@ -1290,7 +1276,7 @@
                   <i class="flaticon-customer-loyalty"></i>
                 </div>
                 <div class="tpfact__content">
-                  <h2><span class="counter">130</span>+</h2>
+                  <h2><span class="">130</span>+</h2>
                   <span>Satisfied Clients</span>
                 </div>
               </div>
@@ -1305,7 +1291,7 @@
                   <i class="flaticon-rate"></i>
                 </div>
                 <div class="tpfact__content">
-                  <h2><span class="counter">94</span>%</h2>
+                  <h2><span class="">94</span>%</h2>
                   <span>Success Rates</span>
                 </div>
               </div>
@@ -1737,8 +1723,9 @@
                           ></a>
                         </li>
                         <li>
-                          <a href="#"
-                            ><i class="fa-brands fa-pinterest-p"></i
+                          <a
+                            href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+                            ><i class="fa-brands fa-instagram"></i
                           ></a>
                         </li>
                       </ul>
