--- a/error.html
+++ b/error.html
@@ -142,7 +142,7 @@
                                   <a href="Insurance_01.html">Our services</a>
                                 </li>
                                 <li>
-                                  <a href="about.html">About Us</a>
+                                  <a href="Insurance_01.html">About Us</a>
                                 </li>
                                 <li><a href="contact.html">Contact</a></li>
                               </ul>
@@ -257,7 +257,7 @@
                <div class="col-xxl-12">
                   <div class="breadcrumb__content p-relative z-index-1 text-center">
                      <div class="breadcrumb__list mb-10">
-                        <span><a href="index.html">INSUREZ </a></span>
+                        <span><a href="index.html">WEST CONSULT </a></span>
                         <span class="dvdr"> / </span>
                         <span class="sub-page-black">Error</span>
                      </div>
