--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -27,6 +27,7 @@
   </head>
 
   <body>
+    <h1>Terms & Conditions</h1>
     <script src="assets/js/vendor/jquery.js"></script>
     <script src="assets/js/vendor/waypoints.js"></script>
     <script src="assets/js/bootstrap-bundle.js"></script>
